# Forge

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docs/: CLAUDE.md  FORGE_SPEC.md  KNOWN_ISSUES.md  LLAMA_CPP_INTEGRATION.md  ROADMAP_CONTEXT_AND_RAG.md  SEARCH_ARCHITECTURE.md  TASKS.md  V0.1.1_ROADMAP.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  macos.rs  main.rs
src-tauri/src/commands/: chat.rs  conversations.rs  files.rs  mod.rs  models.rs  search.rs  settings.rs  sidecar.rs
src-tauri/src/config/: settings.rs
src-tauri/src/db/: connection.rs  conversations.rs  messages.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/files/: processor.rs  store.rs
src-tauri/src/inference/: mod.rs  model_profile.rs  openai_compat.rs  provider.rs  types.rs
src-tauri/src/models/: catalog.rs  download.rs  manager.rs  mod.rs
src-tauri/src/orchestrator/: agent.rs
src-tauri/src/sidecar/: binary.rs  gpu.rs  mod.rs  process.rs
src-tauri/src/system_prompt/: builder.rs
src-tauri/src/tools/: file_reader.rs  mod.rs  registry.rs  web_search.rs
src-tauri/src/tools/search/: brave.rs  duckduckgo.rs  mod.rs  searxng.rs
src/lib/: format.ts  groupConversations.ts  groupMessages.ts  parseThinking.ts  tauri.ts  types.ts
src/stores/: chatStore.ts  connectionStore.ts  conversationStore.ts  modelStore.ts  notificationStore.ts  settingsStore.ts  sidecarStore.ts  (+1 more)
(+27 files in other folders)
